--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,11 +2,23 @@
   "robotWidth": 0.9,
   "robotLength": 0.9,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
-  "defaultMaxVel": 1.5,
-  "defaultMaxAccel": 1.5,
-  "defaultMaxAngVel": 270.0,
-  "defaultMaxAngAccel": 360.0,
-  "maxModuleSpeed": 2.5
+  "pathFolders": [
+    "1NoteSourceSide",
+    "2NoteLeft",
+    "2NoteSourceSideFar",
+    "3NoteSourceSideAllFar",
+    "4NoteCenter",
+    "2NoteAmpAdvanced"
+  ],
+  "autoFolders": [
+    "New Folder",
+    "StartingFromBottom",
+    "StartingFromSpeaker",
+    "StartingFromTop"
+  ],
+  "defaultMaxVel": 2.7,
+  "defaultMaxAccel": 3.3,
+  "defaultMaxAngVel": 320.0,
+  "defaultMaxAngAccel": 400.0,
+  "maxModuleSpeed": 5.0
 }
